--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "manager-web-portal",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@fortawesome/fontawesome-free-webfonts": "^1.0.3",
     "bootstrap": "^4.0.0",
     "classnames": "^2.2.5",
     "copy-to-clipboard": "^3.0.8",
     "formik": "^0.11.11",
-    "gv-api-web": "^1.0.6",
+    "gv-api-web": "^1.0.7",
     "jwt-decode": "^2.2.0",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.2",
