--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "classnames": "^2.2.5",
     "copy-to-clipboard": "^3.0.8",
     "formik": "^0.11.11",
-    "gv-api-web": "^1.0.7",
+    "gv-api-web": "^1.0.8",
     "jwt-decode": "^2.2.0",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.2",
@@ -32,8 +32,7 @@
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src src/ -o src/",
-    "watch-css":
-      "npm run build-css && node-sass-chokidar --include-path ./src src/ -o src/ --watch --recursive",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
