--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "classnames": "^2.2.5",
     "copy-to-clipboard": "^3.0.8",
     "formik": "^0.11.11",
-    "gv-api-web": "^1.0.11",
+    "gv-api-web": "^1.0.24",
     "jwt-decode": "^2.2.0",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.2",
@@ -17,18 +17,20 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-number-format": "^3.1.5",
+    "react-pager": "^1.3.3",
     "react-popper": "^0.8.2",
     "react-redux": "^5.0.6",
     "react-redux-loading-bar": "^3.1.1",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.0",
+    "react-select": "^1.2.1",
     "reactstrap": "^5.0.0-beta",
     "recharts": "^1.0.0-beta.10",
     "redux": "^3.7.2",
     "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
-    "yup": "^0.24.0"
+    "yup": "^0.24.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src src/ -o src/",
