--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "formik": "^0.11.11",
     "gv-api-web": "^1.0.24",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.21.0",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.2",
     "qrcode.react": "^0.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-input-range": "^1.3.0",
     "react-number-format": "^3.1.5",
     "react-pager": "^1.3.3",
     "react-popper": "^0.8.2",
