--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "qrcode.react": "^0.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-dropzone": "^4.2.9",
     "react-input-range": "^1.3.0",
     "react-number-format": "^3.1.5",
     "react-pager": "^1.3.3",
