--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "npm-run-all": "^4.1.2",
     "qrcode.react": "^0.7.2",
     "react": "^16.2.0",
+    "react-datepicker": "^1.3.0",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.9",
     "react-input-range": "^1.3.0",
