--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "classnames": "^2.2.5",
     "copy-to-clipboard": "^3.0.8",
     "formik": "^0.11.11",
-    "gv-api-web": "^1.0.27",
+    "gv-api-web": "^1.0.28",
     "jwt-decode": "^2.2.0",
     "moment": "^2.21.0",
     "node-sass-chokidar": "^0.0.3",
@@ -37,8 +37,7 @@
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src src/ -o src/",
-    "watch-css":
-      "npm run build-css && node-sass-chokidar --include-path ./src src/ -o src/ --watch --recursive",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
