--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.0.0",
     "classnames": "^2.2.5",
     "copy-to-clipboard": "^3.0.8",
+    "cropperjs": "^1.3.4",
     "formik": "^0.11.11",
     "gv-api-web": "^1.0.29",
     "jwt-decode": "^2.2.0",
