--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "copy-to-clipboard": "^3.0.8",
     "cropperjs": "^1.3.4",
     "formik": "^0.11.11",
-    "gv-api-web": "^1.0.36",
+    "gv-api-web": "https://github.com/GenesisVision/gv-api-web.git",
     "jwt-decode": "^2.2.0",
     "moment": "^2.21.0",
     "node-sass-chokidar": "^0.0.3",
@@ -39,7 +39,8 @@
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src src/ -o src/ --watch --recursive",
+    "watch-css":
+      "npm run build-css && node-sass-chokidar --include-path ./src src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
