--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "copy-to-clipboard": "^3.0.8",
     "cropperjs": "^1.3.4",
     "formik": "^0.11.11",
-    "gv-api-web": "https://github.com/GenesisVision/gv-api-web.git",
+    "gv-api-web": "git+https://github.com/GenesisVision/gv-api-web.git",
     "jwt-decode": "^2.2.0",
     "moment": "^2.21.0",
-    "node-sass-chokidar": "^0.0.3",
+    "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.2",
-    "qrcode.react": "^0.7.2",
+    "qrcode.react": "^0.8.0",
     "react": "^16.2.0",
     "react-cropper": "^1.0.1",
     "react-datepicker": "^1.3.0",
@@ -23,24 +23,23 @@
     "react-input-range": "^1.3.0",
     "react-number-format": "^3.1.5",
     "react-pager": "^1.3.3",
-    "react-popper": "^0.8.2",
+    "react-popper": "^0.10.1",
     "react-redux": "^5.0.6",
-    "react-redux-loading-bar": "^3.1.1",
+    "react-redux-loading-bar": "^4.0.3",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
-    "react-scripts": "1.1.0",
+    "react-scripts": "1.1.4",
     "react-select": "^1.2.1",
     "reactstrap": "^5.0.0-beta",
     "recharts": "^1.0.0-beta.10",
-    "redux": "^3.7.2",
+    "redux": "^4.0.0",
     "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
     "yup": "^0.24.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src src/ -o src/",
-    "watch-css":
-      "npm run build-css && node-sass-chokidar --include-path ./src src/ -o src/ --watch --recursive",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
@@ -49,7 +48,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-jest": "22.1.0",
+    "babel-jest": "22.4.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
