--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "cropperjs": "^1.3.4",
     "formik": "^0.11.11",
     "gv-api-web": "git+https://github.com/GenesisVision/gv-api-web.git",
+    "i18next": "^11.2.3",
+    "i18next-browser-languagedetector": "^2.2.0",
+    "i18next-icu": "^0.3.0",
+    "i18next-xhr-backend": "^1.5.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.21.0",
     "node-sass-chokidar": "^1.2.2",
@@ -20,6 +24,7 @@
     "react-datepicker": "^1.3.0",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.9",
+    "react-i18next": "^7.6.0",
     "react-input-range": "^1.3.0",
     "react-number-format": "^3.1.5",
     "react-pager": "^1.3.3",
