--- a/package.json
+++ b/package.json
@@ -3,48 +3,49 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free-webfonts": "^1.0.3",
-    "bootstrap": "^4.0.0",
+    "@fortawesome/fontawesome-free-webfonts": "^1.0.6",
+    "bootstrap": "^4.1.0",
     "classnames": "^2.2.5",
     "copy-to-clipboard": "^3.0.8",
-    "cropperjs": "^1.3.4",
+    "cropperjs": "^1.3.5",
     "formik": "^0.11.11",
     "gv-api-web": "git+https://github.com/GenesisVision/gv-api-web.git",
     "i18next": "^11.2.3",
     "i18next-browser-languagedetector": "^2.2.0",
     "i18next-xhr-backend": "^1.5.1",
     "jwt-decode": "^2.2.0",
-    "moment": "^2.21.0",
+    "moment": "^2.22.1",
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.2",
     "qrcode.react": "^0.8.0",
     "qs": "^6.5.1",
-    "react": "^16.2.0",
+    "react": "^16.3.2",
     "react-cropper": "^1.0.1",
-    "react-datepicker": "^1.3.0",
-    "react-dom": "^16.2.0",
+    "react-datepicker": "^1.4.1",
+    "react-dom": "^16.3.2",
     "react-dropzone": "^4.2.9",
-    "react-i18next": "^7.6.0",
+    "react-i18next": "^7.6.1",
     "react-input-range": "^1.3.0",
-    "react-number-format": "^3.1.5",
+    "react-number-format": "^3.3.4",
     "react-pager": "^1.3.3",
     "react-popper": "^0.10.1",
-    "react-redux": "^5.0.6",
-    "react-redux-loading-bar": "^4.0.3",
+    "react-redux": "^5.0.7",
+    "react-redux-loading-bar": "^4.0.4",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^1.1.4",
     "react-select": "^1.2.1",
-    "reactstrap": "^5.0.0-beta",
+    "reactstrap": "^5.0.0",
     "recharts": "^1.0.0-beta.10",
     "redux": "^4.0.0",
-    "redux-promise-middleware": "^5.0.0",
+    "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.2.0",
     "yup": "^0.24.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src src/ -o src/ --watch --recursive",
+    "watch-css":
+      "npm run build-css && node-sass-chokidar --include-path ./src src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
@@ -53,13 +54,13 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-jest": "22.4.3",
+    "babel-jest": "^22.4.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "react-test-renderer": "^16.2.0",
+    "react-test-renderer": "^16.3.2",
     "redux-devtools": "^3.4.1"
   }
 }
