--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "npm-run-all": "^4.1.2",
     "qrcode.react": "^0.8.0",
     "qs": "^6.5.1",
+    "rc-slider": "^8.6.1",
     "react": "^16.3.2",
     "react-cropper": "^1.0.1",
     "react-datepicker": "^1.4.1",
@@ -40,6 +41,7 @@
     "redux": "^4.0.0",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "yup": "^0.24.1"
   },
   "devDependencies": {
