--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://core.gv
-REACT_APP_INVESTOR_PORTAL_URL=http://investor.gv
+REACT_APP_API_URL=https://alpha.genesis.vision
+REACT_APP_INVESTOR_PORTAL_URL=https://alpha.genesis.vision
