--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "reactstrap": "^5.0.0",
     "recharts": "^1.0.0-beta.10",
     "redux": "^4.0.0",
+    "redux-debounced": "^0.5.0",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
