--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free-webfonts": "^1.0.6",
-    "bootstrap": "^4.1.0",
     "classnames": "^2.2.5",
     "copy-to-clipboard": "^3.0.8",
     "cropperjs": "^1.3.5",
@@ -15,8 +13,6 @@
     "i18next-xhr-backend": "^1.5.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.1",
-    "node-sass-chokidar": "^1.2.2",
-    "npm-run-all": "^4.1.2",
     "qrcode.react": "^0.8.0",
     "qs": "^6.5.1",
     "rc-slider": "^8.6.1",
@@ -35,7 +31,7 @@
     "react-redux-loading-bar": "^4.0.4",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
-    "react-scripts": "^1.1.4",
+    "react-scripts": "^2.0.0-next.a671462c",
     "react-select": "^1.2.1",
     "reactstrap": "^5.0.0",
     "recharts": "^1.0.0-beta.10",
@@ -65,13 +61,8 @@
   },
   "scripts": {
     "precommit": "lint-staged",
-    "build-css": "node-sass-chokidar --include-path ./src src/ -o src/",
-    "watch-css":
-      "npm run build-css && node-sass-chokidar --include-path ./src src/ -o src/ --watch --recursive",
-    "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
-    "build-js": "react-scripts build",
-    "build": "npm-run-all build-css build-js",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
@@ -84,5 +75,13 @@
       "parser": "babylon",
       "style": "module"
     }
+  },
+  "browserslist": {
+    "development": [
+      "last 2 chrome versions",
+      "last 2 firefox versions",
+      "last 2 edge versions"
+    ],
+    "production": [">0.25%", "not op_mini all", "ie 11"]
   }
 }
