--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "classnames": "^2.2.5",
     "copy-to-clipboard": "^3.0.8",
     "cropperjs": "^1.3.5",
+    "debounce": "^1.2.0",
     "formik": "^0.11.11",
     "gv-api-web": "git+https://github.com/GenesisVision/gv-api-web.git",
-    "gv-react-components": "^0.0.22",
+    "gv-react-components": "^0.0.24",
     "i18next": "^11.2.3",
     "i18next-browser-languagedetector": "^2.2.0",
     "i18next-xhr-backend": "^1.5.1",
