--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.1",
     "node-sass": "^4.9.3",
+    "prop-types": "^15.6.2",
     "qrcode.react": "^0.8.0",
     "qs": "^6.5.1",
     "rc-slider": "^8.6.1",
