--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "i18next-browser-languagedetector": "^2.2.0",
     "i18next-xhr-backend": "^1.5.1",
     "jwt-decode": "^2.2.0",
+    "lodash.pickby": "^4.6.0",
     "moment": "^2.22.1",
     "node-sass": "^4.9.3",
     "prop-types": "^15.6.2",
@@ -31,7 +32,7 @@
     "react-event-listener": "^0.6.3",
     "react-i18next": "^7.6.1",
     "react-input-range": "^1.3.0",
-    "react-number-format": "^3.3.4",
+    "react-number-format": "^3.6.2",
     "react-pager": "^1.3.3",
     "react-popper": "^0.10.1",
     "react-redux": "^5.0.7",
