--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,7 @@
 {
   "parser": "babel-eslint",
   "extends": "react-app",
-  "plugins": [
-    "react",
-    "jsx-a11y",
-    "import",
-    "prettier"
-  ],
+  "plugins": ["react", "jsx-a11y", "import", "prettier"],
   "rules": {
     "prettier/prettier": "error"
   }
