--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "yup": "^0.24.1"
   },
   "devDependencies": {
-    "babel-jest": "^22.4.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -75,8 +74,14 @@
     "eject": "react-scripts eject"
   },
   "lint-staged": {
-    "*.js": ["import-sort --write", "git add"],
-    "*.{js,json,scss,md}": ["prettier --write", "git add"]
+    "*.js": [
+      "import-sort --write",
+      "git add"
+    ],
+    "*.{js,json,scss,md}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "importSort": {
     ".js": {
@@ -90,6 +95,10 @@
       "last 2 firefox versions",
       "last 2 edge versions"
     ],
-    "production": [">0.25%", "not op_mini all", "ie 11"]
+    "production": [
+      ">0.25%",
+      "not op_mini all",
+      "ie 11"
+    ]
   }
 }
