--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "manager-web-portal",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/manager/",
   "dependencies": {
     "classnames": "^2.2.5",
     "copy-to-clipboard": "^3.0.8",
