--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-redux-loading-bar": "^4.0.4",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
-    "react-scripts": "^2.0.0-next.a671462c",
+    "react-scripts": "^2.1.1",
     "react-select": "^1.2.1",
     "reactstrap": "^5.0.0",
     "recharts": "^1.0.0-beta.10",
